--- a/app/views/vagas/edit.html.erb
+++ b/app/views/vagas/edit.html.erb
@@ -13,13 +13,13 @@
   <% end %>
 
   <div>
-    <%= form.label :titulo %>
-    <%= form.text_field :titulo %>
+    <%= form.label :title %>
+    <%= form.text_field :title %>
   </div>
 
   <div>
-    <%= form.label :descricao %>
-    <%= form.text_area :descricao %>
+    <%= form.label :description %>
+    <%= form.text_area :description %>
   </div>
 
   <div>
