--- a/app/views/candidaturas/index.html.erb
+++ b/app/views/candidaturas/index.html.erb
@@ -1,22 +1,24 @@
-<h1>Lista de Candidaturas</h1>
+<h1>Candidaturas</h1>
+
 <%= link_to 'Nova Candidatura', new_candidatura_path %>
+
 <table>
   <thead>
     <tr>
-      <th>Candidato</th>
-      <th>Vaga</th>
+      <th>Título</th>
+      <th>Descrição</th>
       <th>Ações</th>
     </tr>
   </thead>
   <tbody>
     <% @candidaturas.each do |candidatura| %>
       <tr>
-        <td><%= candidatura.candidato.nome %></td>
-        <td><%= candidatura.vaga.titulo %></td>
+        <td><%= candidatura.vaga.title %></td>
+        <td><%= candidatura.vaga.description %></td>
         <td>
-          <%= link_to 'Mostrar', candidatura %>
+          <%= link_to 'Mostrar', candidatura_path(candidatura) %>
           <%= link_to 'Editar', edit_candidatura_path(candidatura) %>
-          <%= link_to 'Remover', candidatura, method: :delete, data: { confirm: 'Tem certeza?' } %>
+          <%= link_to 'Deletar', candidatura_path(candidatura), method: :delete, data: { confirm: 'Você tem certeza?' } %>
         </td>
       </tr>
     <% end %>
