--- a/app/views/vagas/show.html.erb
+++ b/app/views/vagas/show.html.erb
@@ -1,6 +1,6 @@
-<h1><%= @vaga.titulo %></h1>
+<h1><%= @vaga.title %></h1>
 
-<p><strong>Descrição:</strong> <%= @vaga.descricao %></p>
+<p><strong>Descrição:</strong> <%= @vaga.description %></p>
 
 <%= link_to 'Editar', edit_vaga_path(@vaga) %> |
 <%= link_to 'Voltar', vagas_path %>
