--- a/app/views/candidaturas/show.html.erb
+++ b/app/views/candidaturas/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Detalhes da Candidatura</h1>
 <p><strong>Candidato:</strong> <%= @candidatura.candidato.nome %></p>
-<p><strong>Vaga:</strong> <%= @candidatura.vaga.titulo %></p>
+<p><strong>Vaga:</strong> <%= @candidatura.vaga.title %></p>
 <%= link_to 'Editar', edit_candidatura_path(@candidatura) %> |
 <%= link_to 'Voltar', candidaturas_path %>
